--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Inconsolata';
+  src: url('/assets/fonts/inconsolata/Inconsolata-VariableFont_wdth\,wght.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('/assets/fonts/inter/Inter-VariableFont_slnt\,wght.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Lora';
+  src: url('/assets/fonts/lora/Lora-VariableFont_wght.ttf') format('ttf');
+}
+
 :root {
   --black: #050505;
   --dark-gray-1: #1f1f1f;
@@ -9,4 +24,8 @@
   --light-gray-3: #757575;
   --red: #ff5252;
   --purple: #a44fed;
+
+  --sans-serif: 'Inter';
+  --serif: 'Lora';
+  --mono: 'Incosolata';
 }
