--- a/style.css
+++ b/style.css
@@ -29,3 +29,80 @@
   --serif: 'Lora';
   --mono: 'Incosolata';
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.body-container {
+  margin: 0 24px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+
+.header-containers {
+  display: flex;
+  align-items: center;
+}
+
+header
+.dropdown-container {
+  display: flex;
+  align-items: center;
+  margin-right: 16px;
+}
+.dropdown-container
+p {
+  margin-right: 16px;
+  font-weight: bold;
+}
+
+.divider {
+  height: 100%;
+  width: 1px;
+  background: var(--light-gray-2);
+}
+
+header
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin-left: 16px;
+}
+
+.toggle-icon {
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 30px;
+}
+
+.oval {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: gray;
+}
+
+.circle {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: white;
+}
