--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin-top: 24px;
+  margin: 24px 0;
 }
 
 .header-containers {
@@ -105,4 +105,22 @@ header
   height: 14px;
   border-radius: 50%;
   background-color: white;
+}
+
+main
+input {
+  width: 100%;
+  height: 48px;
+  border-radius: 16px;
+  border: none;
+  background-color: var(--light-gray-1);
+  padding: 16px 24px;
+  font-size: 16px;
+  caret-color: var(--purple);
+  margin-bottom: 24px;
+}
+
+main
+input:focus {
+  outline-color: var(--purple);
 }
