--- a/style.css
+++ b/style.css
@@ -217,3 +217,36 @@ p:nth-of-type(2) {
   font-size: 16px;
   font-weight: bold;
 }
+
+section
+.example {
+  font-size: 15px;
+  line-height: 24px;
+  color: var(--light-gray-3);
+  margin: 13px 0 32px 25px;
+}
+
+footer
+hr {
+  margin-bottom: 24px;
+}
+
+footer
+p {
+  font-size: 14px;
+  color: var(--light-gray-3);
+  text-decoration: underline;
+  margin-bottom: 8px;
+}
+
+footer
+a {
+  font-size: 14px;
+  color: var(--dark-gray-2);
+  margin-right: 9px;
+}
+
+footer
+.link-container {
+  margin-bottom: 85px;
+}
