--- a/style.css
+++ b/style.css
@@ -217,7 +217,6 @@ header
   stroke: var(--purple);
 }
 
-main
 input {
   width: 100%;
   height: 48px;
@@ -240,9 +239,12 @@ input {
   color: var(--white);
 }
 
-main
 input:focus {
   outline-color: var(--purple);
+}
+
+.hidden-container.hide {
+  display: none;
 }
 
 main
@@ -401,7 +403,6 @@ footer
     left: -3rem;
   }
 
-  main
   input {
     margin-bottom: 50px;
   }
@@ -506,7 +507,6 @@ footer
     left: -5rem;
   }
 
-  main
   input {
     margin-bottom: 43px;
   }
