--- a/style.css
+++ b/style.css
@@ -217,6 +217,18 @@ header
   stroke: var(--purple);
 }
 
+.input-container {
+  position: relative;
+  margin-bottom: 24px;
+}
+
+.input-container
+svg {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+
 input {
   width: 100%;
   height: 48px;
@@ -225,7 +237,10 @@ input {
   padding: 16px 24px;
   font-size: 16px;
   caret-color: var(--purple);
-  margin-bottom: 24px;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  display: none;
 }
 
 .light-mode
